--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://parth-commits.github.io/",
+  "homepage": "https://parth-commits.github.io/",
   "name": "portfolioreact",
   "version": "0.1.0",
   "private": true,
